@@ -50,6 +50,13 @@ Changes Since 0.3.9
 * docutils/statemachine.py:
 
   - Added trailing whitespace stripping to ``string2lines()``.
+  - Added ``StringList.pad_double_width()`` & ``.replace()`` for East
+    Asian double-width character support.
+
+* docutils/utils.py:
+
+  - Added ``east_asian_column_width()`` for double-width character
+    support.
 
 * docutils/languages/ja.py: Added to project: Japanese mappings by
   Hisashi Morita.
@@ -74,6 +81,11 @@ Changes Since 0.3.9
     definitions are now disallowed.
   - Fixed bug: list items with blank first lines.
   - Fixed bug: block quote attributions with indented second lines.
+  - Added East Asian double-width character support (Python 2.4 only).
+
+* docutils/parsers/rst/tableparser.py:
+
+  - Added East Asian double-width character support (Python 2.4 only).
 
 * docutils/parsers/rst/directives/body.py:
 
